--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "deepchat",
     "private": true,
-    "version": "0.1.0",
+    "version": "0.0.1",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -10,7 +10,8 @@
         "tauri": "tauri",
         "tauri:dev": "tauri dev",
         "tauri:build": "tauri build",
-        "tauri:debug": "tauri build --debug"
+        "tauri:debug": "tauri build --debug",
+        "tauri:icon": "tauri icon"
     },
     "dependencies": {
         "@tauri-apps/api": "^2",
